<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/riv_poster_detail"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:src="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="20dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_title_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserratsemibold"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/riv_poster_detail"
        tools:text="@string/title" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="@id/tv_title_detail"
        app:layout_constraintStart_toStartOf="@id/tv_title_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_title_detail" />

    <TextView
        android:id="@+id/tv_title_release"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserratmedium"
        android:text="@string/release_date"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/iv_star"
        app:layout_constraintStart_toStartOf="@id/tv_title_detail"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/tv_release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserratlight"
        android:textColor="@color/white_second"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/iv_star"
        app:layout_constraintStart_toStartOf="@id/tv_title_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_title_release"
        tools:text="@string/date_dummy" />

    <ImageView
        android:id="@+id/iv_star"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/star"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toTopOf="@id/tv_release_date"
        app:layout_constraintEnd_toStartOf="@id/tv_rate_detail"
        app:layout_constraintTop_toTopOf="@id/tv_release_date" />


    <TextView
        android:id="@+id/tv_rate_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/montserratlight"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/iv_star"
        app:layout_constraintEnd_toEndOf="@id/tv_title_detail"
        app:layout_constraintTop_toTopOf="@+id/iv_star"
        tools:text="@string/rate" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:contentDescription="@string/favorite"
        app:layout_constraintBottom_toBottomOf="@id/riv_poster_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/riv_poster_detail"
        app:srcCompat="@android:drawable/ic_dialog_email"/>

    <TextView
        android:id="@+id/tv_storyboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserratmedium"
        android:text="@string/storyline"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_title_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_release_date" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:paddingBottom="24dp"
        android:fontFamily="@font/montserratlight"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/tv_title_detail"
        app:layout_constraintStart_toStartOf="@id/tv_title_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_storyboard"
        tools:text="@string/dummy_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>